<resources>
    <string name="app_name">HealthNote</string>
    <string name="plusString">+</string>
    <string name="addMedicineNamePreview">e.g. cetirizine</string>
    <string name="addMedicineFormPreview">e.g. orally</string>
    <string name="addMedicineDosePreview">e.g. 200mg per day</string>
    <string name="formOfAdministration">Form of administration</string>
    <string name="name">Name</string>
    <string name="dose">Dose</string>
    <string name="timeOfConsumption">Time of consumption</string>
    <string name="delete">Delete</string>
    <string name="checkmark">Checkmark</string>
    <string name="setTime">SET TIME</string>
    <string name="addFabContentDescription">Add Medicament</string>
    <string name="fireAlertQuestion">Enable notification</string>
    <string name="NotificationRepeat">Repeat Interval</string>
    <string-array name="repeat_array">
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HealthNote</string>
    <string name="nav_header_subtitle">healthnote.app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_list">Medicaments</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_settings">Settings</string>
    <string name="protPin">Protection PIN</string>
    <string name="changePin">Change PIN</string>
    <string name="enableBiometrics">Use biometric authentication</string>
    <string name="passwordHint">Enter your PIN</string>
    <string name="PIN">PIN</string>
    <string name="checkPin">Check PIN</string>

    <string name="authentication_btn">Authenticate</string>
    <string name="authentication_text">Click Button to authenticate</string>
    <string name="use_pin">Use pin to authenticate</string>

    <string name="calendar_title">Title</string>
    <string name="calendar_location">Location</string>
    <string name="calendar_description">Description</string>
    <string name="calender_datetext">Date</string>
    <string name="calender_time">Set Time</string>
    <string name="calender_date">Set Date</string>
    <string name="calendar_button">Transfer to Calendar</string>
    <string name="deleteAllMeds">Delete all Medicaments</string>
    <string name="contactDevs">Contact developers</string>

    <string name="addPhoto">add Photo</string>
    <string name="changePhoto">change Photo</string>

    <string name="medPhotoDes">medication Photo</string>


</resources>