<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.calendar.CalendarFragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/calendar_title"
            android:text="@string/calendar_title"
            app:layout_constraintStart_toStartOf="@id/etTitle"
            app:layout_constraintBottom_toTopOf="@id/etTitle"/>

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/calendar_title"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/etLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_location"
            app:layout_constraintStart_toStartOf="@id/etLocation"
            app:layout_constraintBottom_toTopOf="@id/etLocation" />

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/calendar_location"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toTopOf="@+id/etDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTitle"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_description"
            app:layout_constraintStart_toStartOf="@id/etDescription"
            app:layout_constraintBottom_toTopOf="@id/etDescription" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/calendar_description"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toTopOf="@+id/btnTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLocation"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calender_datetext"
            app:layout_constraintStart_toStartOf="@id/btnTime"
            app:layout_constraintBottom_toTopOf="@id/btnTime" />

        <Button
            android:id="@+id/btnTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_button"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/etDescription"
            app:layout_constraintStart_toStartOf="@id/etDescription"
            app:layout_constraintTop_toBottomOf="@+id/btnDate"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calender_time"
            android:layout_marginBottom="50dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            app:layout_constraintBottom_toTopOf="@+id/btnTransfer"
            app:layout_constraintEnd_toEndOf="@id/etDescription"
            app:layout_constraintStart_toStartOf="@id/etDescription"
            app:layout_constraintTop_toBottomOf="@+id/etDescription"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calender_date"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="@id/etDescription"
            app:layout_constraintStart_toStartOf="@id/etDescription"
            app:layout_constraintTop_toBottomOf="@+id/btnTime" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>